<resources>
    <string name="app_name">Mis Mascotas</string>
    <string name="pnombre">Nombre</string>
    <string name="numero_hueso">5</string>
    <string name="nombre_principalBar">Mis Mascotas</string>
    <string name="nombre_favoritosBar">Mis Mascotas Favoritas</string>
    <string name="nombre_ContactoBar">Datos de Contacto</string>
    <string name="aboutBar">Acerca de mis Mascotas</string>
    <string name="mensajeBar">Mensaje de correo</string>

    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca_de">Acerca de</string>

    <string name="nombreContacto">Nombre Completo</string>
    <string name="emailContacto">Email</string>
    <string name="mensajeContacto">Mensaje</string>

    //identificadores de Intento
    <string name="pNombre">Contnombre</string>
    <string name="pEmail">email</string>
    <string name="pDescripcion">descripcion</string>

    <string name="enviarComentario">Enviar Comentario</string>

    <string name="versionApp">Versión de la aplicación: 2.1.0</string>
    <string name="desarrollador">Desarrollador: Luis Felipe Rojas</string>
    <string name="ubicacion">Medellín - Colombia</string>
    <string name="Año">2020</string>
    <string name="botonEnviar">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>